# FACMIM

./: README.md  pyproject.toml  requirements.txt
data/compas/: compas_binary_race.csv
manuscript/latex/: figure_manifest.csv  figure_references.tex  latex_artifacts_index.md
manuscript/sections/: empirical_interpretation.md  empirical_interpretation_condensed.md
scripts/: create_cross_dataset_summary.py  fix_selection_frequency_tables.py  generate_latex_artifacts.py  plot_pareto.py  run_5seed_robustness_adult_german.py  run_acs_income_pilot.py  run_adult_pilot.py  run_compas_pilot.py  run_german_credit_pilot.py  run_metrics_smoke.py  run_proxy_removal_ablation_all_methods.py  run_synthetic_triangle_validation.py  summarize_results.py  write_empirical_interpretation.py
src/: __init__.py  config.py  experiment_runner.py  information_theory.py  leakage_estimators.py  metrics.py  models.py  pareto.py  proxy_entanglement.py
tests/: test_acs_income_pilot_script.py  test_adult_pilot_script.py  test_basic_facmim_selector_implemented.py  test_cmim_selector_implemented.py  test_compas_pilot_script.py  test_cross_dataset_summary.py  test_empirical_interpretation_section.py  test_evaluation_metrics.py  test_fair_cfs_baseline.py  test_fair_lasso_baseline.py  test_fair_mrmr_baseline.py  test_german_credit_pilot_script.py  test_information_theory.py  test_latex_artifacts_generation.py  test_leakage.py  test_mrmr_baseline.py  test_pareto.py  test_proxy_rank_baseline.py  test_results_summary_pareto.py  test_selectors.py  test_subset_facmim_selector_implemented.py
(+250 files in other folders)
